[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Characters/First Hero/Attack Bow/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Arrow.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/AbilitySound/Fireball.ogg" type="AudioStream" id=3]

[node name="Arrow" type="RigidBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -2.5625, 0.531249 )
scale = Vector2( 0.958333, 1.01563 )
polygon = PoolVector2Array( 3, -6, 18, -2, 3, 2 )
disabled = true

[node name="ArrowHitbox" type="Area2D" parent="." groups=["ArrowDamager"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ArrowHitbox"]
position = Vector2( 9.375, -1.14583 )
scale = Vector2( 1.125, 0.902778 )
polygon = PoolVector2Array( 0, -6, 10, 0, 0, 3 )

[node name="ArrowLifeTime" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="area_entered" from="ArrowHitbox" to="." method="_on_ArrowHitbox_area_entered"]
[connection signal="timeout" from="ArrowLifeTime" to="." method="_on_ArrowLifeTime_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
